--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
+    "expect": "^27.3.1",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.12"
+    "mocha": "^9.1.3",
+    "mongoose": "^6.0.12",
+    "supertest": "^6.1.6"
   }
 }
